<resources>
    <string name="app_name">Repel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vasilica Farafrica</string>
    <string name="nav_header_subtitle">nu.am.mail@dar-as-vrea-unu.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">REGISTER</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to Notification -->

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>


    <string name="terms_conditions">I agree to the Terms and Conditions.</string>
    <string name="prompt_username">Userame</string>
    <string name="title_activity_register">Create account</string>
    <string name="birth_date_picker">Pick your date of birth:</string>
    <string name="error_invalid_first_name">This name is invalid</string>
    <string name="error_check_box_unchecked">You must agree to the Terms and Conditions</string>
    <string name="auth_failed_toast">Authentication failed.</string>
    <string name="title_activity_question_detail">QuestionDetailActivity</string>
    <string name="font">\@font/MajorMonoDisplay-Regular</string>
    <string name="prompt_question_content">Type question here</string>
    <string name="action_question_submit">Submit</string>
    <string name="prompt_question_anonimity">Post anonimously</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="prompt_answer_content">Type answer here</string>
    <!--
    <string-array name="accounts">
        <item>Vasilica Farafrica</item>
        <item>Ala micu</item>
    </string-array>
    -->
</resources>
