<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    tools:background="	#400000"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
        <!--style="?android:attr/progressBarStyleLarge"-->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:fillViewport="true"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/loginTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_one"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="45sp"
                    android:layout_marginBottom="0dp"
                  />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                >

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="20dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="start"

                        android:singleLine="true"

                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:autofillHints="email"
                        android:drawableStart="@drawable/ic_account_box_black_24dp"
                        android:ems="10"
                        android:hint="@string/prompt_email"

                        android:inputType="textEmailAddress"
                        tools:targetApi="o"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:layout_marginTop="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="start"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:hint="@string/prompt_password"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:drawableStart="@drawable/ic_lock_black_24dp"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:textColor="#5C4242"
                    android:textSize="15sp"
                    tools:background="	#000000"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_register"
                    android:layout_marginTop="150dp"
                    android:textColor="#5C4242"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:background="	#000000"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>